# theta-surface

./: .gitignore  Cargo.toml  profile.sh  readme.md  rustfmt.toml  todo.txt
data/: deribit-btc-market-data.json
src/: constants.rs  main.rs
src/analytics/: math.rs  mod.rs  option_instrument.rs  smile_graph.rs  tests.rs  types.rs
src/fileio/: file.rs  fileio.rs  mod.rs
src/helpers/: formatting_helpers.rs  mod.rs  time_helpers.rs  validation_helpers.rs
src/integrations/: deribit.rs  mod.rs
src/network/: mod.rs  networkio.rs
src/routines/: build_graphs.rs  build_surface.rs  fetch_market_data.rs  help.rs  mod.rs
src/types/: errors.rs  mod.rs
